TrainingStaging/force-app/main/default/objects/Training_Session__c/Training_Session__c.object-meta.xml
<CustomObject>
    <description>Name of the Training Session</description>
    <label>Training Session</label>
    <nameField>
        <label>Training Session Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Training Session</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>