TrainingStaging/force-app/main/default/objects/Training_Session__c/fields/Average_Session_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Average_Session_Feedback__c</fullName>
    <formula>(Feedback_Rating_Sum__c +  Feedback_Record_count__c )/2</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Average Session  Feedback</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>