TrainingStaging/force-app/main/default/objects/Training_Session__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>This will store the details about the training session</description>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>