TrainingStaging/force-app/main/default/objects/Training_Session__c/fields/Feedback_Rating_Sum__c.field-meta.xml
<CustomField>
    <fullName>Feedback_Rating_Sum__c</fullName>
    <description>Sum of total Feedback rating related to the session.</description>
    <label>Feedback Rating  Sum</label>
    <summarizedField>Feedback__c.Rating__c</summarizedField>
    <summaryForeignKey>Feedback__c.Training_Session__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>