TrainingStaging/force-app/main/default/objects/Training_Session__c/fields/Feedback_Record_count__c.field-meta.xml
<CustomField>
    <fullName>Feedback_Record_count__c</fullName>
    <description>Count Total Feedback related to session</description>
    <label>Feedback  Record count</label>
    <summaryForeignKey>Feedback__c.Training_Session__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>