TrainingStaging/force-app/main/default/objects/Training_Session__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <description>If Session is Offline then location of the Session</description>
    <label>Location</label>
    <length>10</length>
    <type>Text</type>
</CustomField>