TrainingStaging/force-app/main/default/objects/Training_Session__c/fields/Session_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Session_End_Date__c</fullName>
    <description>end date of session</description>
    <label>Session End  Date</label>
    <type>Date</type>
</CustomField>