TrainingStaging/force-app/main/default/objects/Training_Session__c/fields/Session_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Session_Start_Date__c</fullName>
    <description>StartDate of Session</description>
    <label>Session Start  Date</label>
    <type>Date</type>
</CustomField>