TrainingStaging/force-app/main/default/objects/Training_Session__c/fields/SessionCategory__c.field-meta.xml
<CustomField>
    <fullName>SessionCategory__c</fullName>
    <label>SessionCategory</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1. Hands-onWorkshop</fullName>
            </value>
            <value>
                <fullName>2. ClassroomTraining</fullName>
            </value>
            <value>
                <fullName>3. Bootcamp</fullName>
            </value>
            <value>
                <fullName>4. Group Activity</fullName>
            </value>
            <value>
                <fullName>5. Live Webinar</fullName>
            </value>
            <value>
                <fullName>6. Recorded Webinar</fullName>
            </value>
            <value>
                <fullName>7. Expert Talk</fullName>
            </value>
            <value>
                <fullName>8. ProductDemo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>