TrainingStaging/force-app/main/default/objects/Training_Session__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1.Planned</fullName>
            </value>
            <value>
                <fullName>2.Registration Open</fullName>
            </value>
            <value>
                <fullName>3.Ongoing</fullName>
            </value>
            <value>
                <fullName>4.Completed</fullName>
            </value>
            <value>
                <fullName>5.Feedback Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>