TrainingStaging/force-app/main/default/objects/Training_Session__c/fields/Total_Attendee__c.field-meta.xml
<CustomField>
    <fullName>Total_Attendee__c</fullName>
    <description>Count of Total Attendee related to session</description>
    <label>Total Attendee</label>
    <summaryForeignKey>Feedback__c.Training_Session__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>