TrainingStaging/force-app/main/default/objects/Training_Session__c/fields/Trainer_name__c.field-meta.xml
<CustomField>
    <fullName>Trainer_name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>To assign a trainer for every session</description>
    <label>Trainer name</label>
    <referenceTo>Trainer__c</referenceTo>
    <relationshipLabel>Training Session</relationshipLabel>
    <relationshipName>Training_Session</relationshipName>
    <type>Lookup</type>
</CustomField>