TrainingStaging/force-app/main/default/objects/Training_Session__c/fields/Webinar_Link__c.field-meta.xml
<CustomField>
    <fullName>Webinar_Link__c</fullName>
    <description>If session is online then link of the session</description>
    <label>Webinar Link</label>
    <type>Url</type>
</CustomField>