TrainingStaging/force-app/main/default/objects/Training_Session__c/validationRules/VR_Session_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_Session_Date</fullName>
    <active>true</active>
    <description>End Date should not be earlier than Start Date.</description>
    <errorConditionFormula>Session_End_Date__c &lt; Session_Start_Date__c</errorConditionFormula>
    <errorDisplayField>Session_End_Date__c</errorDisplayField>
    <errorMessage>End Date cannot be earlier than Start Date</errorMessage>
</ValidationRule>