TrainingStaging/force-app/main/default/objects/Training_Session__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Training_Session__c.Webinar</value>
    </filters>
    <label>All</label>
</ListView>